fix some vale errors

--- a/docs/de-de/modules/payment/pages/beta-zahlungen-verwalten-neu.adoc
+++ b/docs/de-de/modules/payment/pages/beta-zahlungen-verwalten-neu.adoc
@@ -26,7 +26,7 @@ Grundeinstellungen ändern:
 |Einstellung |Erläuterung
 
 | [#intable-match-automatic-assignment]*Übereinstimmung für automatische Zuordnung*
-|Wähle *0.7* (nicht so genaue Übereinstimmung zur Zuordnung nötig) oder *1.0* (genaue Übereinstimmung nötig). Ist dieser Wert höher eingestellt, kann das Problem auftreten, dass Zahlungen nicht zugeordnet werden können. Daher ist in der *Standard-Einstellung* ein Wert von *0,75* eingestellt.
+|Wähle *0.7* (nicht so genaue Übereinstimmung zur Zuordnung erforderlich) oder *1.0* (genaue Übereinstimmung erforderlich). Ist dieser Wert höher eingestellt, kann das Problem auftreten, dass Zahlungen nicht zugeordnet werden können. Daher ist in der *Standard-Einstellung* ein Wert von *0,75* eingestellt.
 
 | [#intable-goodwill-payment]*Zahlungskulanz*
 |Damit z.B. interne Nachkommabeträge (ab der dritten Nachkommastelle) nicht zu falschen Buchungen führen, sollte ein *Mindestbetrag* von *0,01* eingetragen sein (Standard-Einstellung). Wenn z.B. *0,05* eingestellt ist, werden Fehlbeträge bis 5 Cent trotzdem als korrekte Buchung behandelt.
@@ -87,12 +87,12 @@ PayPal-Zahlungen importieren:
 . Klicke auf *Ausführen* (icon:import_export[set=material, role=darkGrey]). +
 → Die Zahlungen mit den eingegebenen Transaktionsnummern werden importiert und der Übersichtstabelle hinzugefügt.
 
-Nach dem Import der PayPal-Zahlungen werden sie wie andere Zahlungen auch automatisch Aufträgen zugeordnet. Für die automatische Zuordnung ist zu beachten, dass diese von der Einstellung *Übereinstimmung für automatische Zuordnung (0.7 - 1.0)* im Menü *Einrichtung » Aufträge » Zahlung » Eingänge* abhängt. Der Wert 0.7 steht für 70% Übereinstimmung, der Wert 1.0 für 100% Übereinstimmung. Sollte eine Zahlung nicht automatisch zugeordnet werden können, kannst du sie manuell <<#30, zuordnen>>. +
+Nach dem Import der PayPal-Zahlungen werden sie wie andere Zahlungen auch automatisch Aufträgen zugeordnet. Für die automatische Zuordnung ist zu beachten, dass diese von der Einstellung *Übereinstimmung für automatische Zuordnung (0.7 - 1.0)* im Menü *Einrichtung » Aufträge » Zahlung » Eingänge* abhängt. Der Wert 0.7 steht für 70% Übereinstimmung, der Wert 1.0 für 100% Übereinstimmung. Sollte eine Zahlung nicht automatisch zugeordnet werden können, kannst du die Zahlung manuell <<#30, zuordnen>>. +
 *_Beachte:_* Nach dem Import kann es bis zu 15 Minuten dauern, bis die automatische Zuordnung erfolgt ist.
 
 == Spalten konfigurieren
 
-Du kannst die Tabelle in der Übersicht im Menü *Aufträge » Zahlungsverkehr* anpassen. Das bedeutet, du selbst entscheidest, welche Informationen dir in den Tabellenspalten angezeigt werden. 
+Du kannst die Tabelle in der Übersicht im Menü *Aufträge » Zahlungsverkehr* anpassen. Das bedeutet, du selbst entscheidest, welche Informationen in den Tabellenspalten angezeigt werden. 
 
 [.instruction]
 Spalten konfigurieren:
@@ -155,7 +155,7 @@ Zahlung suchen:
 |Gib den Namen der Person ein, die die Zahlung getätigt hat, um nach Zahlungen von dieser Person zu suchen.
 
 | *Soll/Haben*
-|Wähle zwischen *Soll* und *Haben*. +
+|Wähle *Soll* oder *Haben*. +
 *Haben* = Alle Zahlungseingänge mit positivem Wert werden angezeigt. +
 *Soll* = Alle Zahlungseingänge mit negativem Wert werden angezeigt.
 
@@ -164,30 +164,31 @@ Zahlung suchen:
 *_Beispiel:_* Wähle *Größer als oder gleich* und gib 300 als *Betrag* ein, um alle Zahlungen mit einem Zahlungsbetrag von 300 oder mehr anzuzeigen.
 
 | *Zuordnung*
-|Du kannst zwischen *Zugeordnet* oder *Unzugeordnet* wählen. +
-*Zugeordnet* = Zeigt dir nur Zahlungen, die bereits einem Auftrag zugeordnet wurden. +
-*Unzugeordnet* = Zeigt dir nur Zahlungen, die keinem Auftrag zugeordnet wurden.
+|Wähle *Zugeordnet* oder *Unzugeordnet*. +
+*Zugeordnet* = Zeigt nur Zahlungen an, die bereits einem Auftrag zugeordnet wurden. +
+*Unzugeordnet* = Zeigt nur Zahlungen an, die keinem Auftrag zugeordnet wurden.
 
 | *Status*
-|Wähle einen Status aus, um nach Zahlungen mit diesem Status zu suchen.
+|Wähle einen Status, um nach Zahlungen mit diesem Status zu suchen.
 
 | *Transaktionstyp*
-|Wähle einen Transaktionstyp aus, um nach Zahlungen mit diesem Transaktionstyp zu suchen.
+|Wähle einen Transaktionstyp, um nach Zahlungen mit diesem Transaktionstyp zu suchen.
 
 | *Währung*
-|Wähle eine Währung aus, um nach Zahlungen in dieser Währung zu suchen.
+|Wähle eine Währung, um nach Zahlungen in dieser Währung zu suchen.
 
 | *Datumstyp*
-|Wähle aus, nach welchem Datumstyp in Verbindung mit der Datumsauswahl darunter gesucht werden soll. Du kannst wählen zwischen *Importdatum*, *Eingangsdatum* und *Zuordnungsdatum*. Angezeigt werden dann alle Zahlungen, die in dem gewählten Zeitraum entsprechend importiert wurden, eingegangen sind oder zugeordnet wurden.
+|Wähle, nach welchem Datumstyp in Verbindung mit der Datumsauswahl darunter gesucht werden soll. Du kannst wählen zwischen *Importdatum*, *Eingangsdatum* und *Zuordnungsdatum*. Angezeigt werden dann alle Zahlungen, die in dem gewählten Zeitraum entsprechend importiert wurden, eingegangen sind oder zugeordnet wurden.
 
 | *von* und *bis*
-|Wähle in Verbindung mit *Datumstyp* einen Zeitraum aus, um nach Zahlungen zu suchen, die in diesem Zeitraum importiert wurden, eingegangen sind oder zugeordnet wurden, je nach Auswahl.
+|Wähle in Verbindung mit *Datumstyp* einen Zeitraum, um nach Zahlungen zu suchen, die in diesem Zeitraum importiert wurden, eingegangen sind oder zugeordnet wurden, je nach Auswahl.
 
 | *Zurücksetzen*
-|Auf *Zurücksetzen* klicken, um alle Filter zurückzusetzen. Erneut auf *Suchen* klicken, um alle Zahlungseingänge anzuzeigen.
+|Setzt die gewählten Filterkriterien zurück.
 
 | *Suchen*
-|Führt die Suche aus.
+|Führt die Suche aus. Die gefundenen Zahlungen werden in der Übersicht angezeigt.
+*_Tipp:_* Setze keine Filter, wenn du alle Zahlungen in der Übersicht sehen möchtest.
 
 |====
 
@@ -199,7 +200,7 @@ Wenn du eine Suche ausführst, siehst du deine gewählten Filter oben als Chips 
 [.instruction]
 Aktuellen Filter speichern: 
 
-. Führe eine Suche aus.
+. Führe eine <<#20, Suche>> aus.
 . Klicke auf *Gespeicherte Filter* (icon:bookmarks[set=material, role=darkGrey]).
 . Klicke auf icon:bookmark_border[set=material, role=darkGrey] *Aktuellen Filter speichern*.
 . Gib einen Namen für den Filter ein.
@@ -405,7 +406,7 @@ Zahlung in Detailansicht zuordnen:
 Die Übereinstimmungen zwischen Zahlungen und Aufträgen werden anhand einer Matrix im Hintergrund überprüft. Diese Überprüfung wird ausgelöst, sobald du die Tabelle *Zuordnung* in der Detailansicht einer Zahlung öffnest. Dann werden dir absteigend maximal die 10 Aufträge mit den höchsten Übereinstimmungsraten angezeigt. +
 Sobald du eine Zahlung zugeordnet hast, wird in dieser Tabelle nur noch diese Zuordnung angezeigt. Nur wenn die Zahlung vom Auftrag <<#40, gelöst>> wird, werden hier wieder die höchsten Übereinstimmungen angezeigt.
 
-Für den Fall, dass in der Zuordnungstabelle keine Übereinstimmungen angezeigt werden, hast du weitere Möglichkeiten. Du kannst über das Kontextmenü (icon:more_vert[set=material, role=darkGrey]) folgende Optionen auswählen:
+Für den Fall, dass in der Zuordnungstabelle keine Übereinstimmungen angezeigt werden, hast du weitere Möglichkeiten. Du kannst über das Kontextmenü (icon:more_vert[set=material, role=darkGrey]) folgende Optionen wählen:
 
 * *Auftrags-ID zuordnen*: Bei Auswahl öffnet sich ein Bearbeitungsfenster. Hier kannst du direkt die Auftrags-ID des Auftrags, dem die Zahlung zugeordnet werden soll, eingeben. Durch klicken auf *Zuordnen* wird die Zahlung dem eingegebenen Auftrag zugeordnet.
 * *Suche Aufträge*: Bei Auswahl wirst du zur Auftragssuche weitergeleitet. In der Auftragssuche sind die Filter *Kundenname*, *Betrag* sowie *Unbezahlt und Teilzahlung* vorausgewählt. So werden dir gleich möglich passende Aufträge angezeigt. Du kannst die Auftragssuche aber auch anpassen, um den richtigen Auftrag zu finden. Danach kannst du die Auftrags-ID in der Zuordnungstabelle eingeben und so die Zahlung zuordnen.
