--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -46,7 +46,7 @@ Zugang zu Kaufland.de einrichten:
 |Einstellung |Erläuterung
 
 | *Anzeigename der Konfiguration*
-| Gib einen aussagekräftigen Namen für diese Kombination aus Mandant (Shop)/plentyShop und Kaufland-Konto ein. Wenn du keinen Anzeigenamen eingibst, wird automatisch der Anzeigename `Standard` gespeichert. +
+| Gib einen aussagekräftigen Namen für diese Kombination aus Mandant (Shop)/plentyShop und Kaufland-Konto ein. Wenn du keinen Anzeigenamen eingibst, wird automatisch der Anzeigename `Standard-Konfiguration` gespeichert. +
 *_Tipp:_* Der Anzeigename wird nur für die Liste der Konfigurationen verwendet. Der Anzeigename dient also nur dazu, die Liste der Konfigurationen im Menü *Einrichtung » Märkte » Kaufland.de » Einstellungen » [Mandant öffnen]* übersichtlicher zu machen.
 
 image::maerkte:kaufland-anzeigename.png[]
@@ -337,10 +337,6 @@ Barcode speichern:
 . Gib den Code in das Feld *Code* ein.
 . *Speichere* (icon:save[set=plenty, role="green"]) die Einstellungen.
 
-
-
-
-
 [#artikelexport]
 == Artikeldaten exportieren
 
@@ -428,9 +424,10 @@ include::partial$catalogue-new-to-text.adoc[]
 [#create-catalogue]
 ==== Katalog erstellen
 
-Artikeldaten werden über einen Katalog zu Kaufland exportiert. Kataloge für Kaufland erstellst du mit dem Assistenten *Kaufland - Kataloge erstellen* im Menü *Einrichtung » Assistenten » Omni-Channel*. Verknüpfe anschließend im eben erstellten Katalog die von Kaufland vorgegebenen Felder mit in plentymarkets gespeicherten Artikeldaten. Wenn du den Katalog aktiviert hast, werden die Artikeldaten einmal täglich automatisch zu {market} exportiert.
+Artikeldaten werden über einen Katalog zu Kaufland exportiert. Kataloge für Kaufland erstellst du mit dem Assistenten *Kaufland - Kataloge erstellen* im Menü *Einrichtung » Assistenten » Omni-Channel*. Verknüpfe anschließend im eben erstellten Katalog die von Kaufland vorgegebenen Felder mit in plentymarkets gespeicherten Artikeldaten. +
+Wenn du den Katalog aktiviert hast, werden die Artikeldaten einmal täglich automatisch zu {market} exportiert.
 
-Für jede Produktkategorie auf Kaufland gibt es ein eigenes Katalog-Format. In jedem Format werden unterschiedliche Artikeldaten exportiert, je nachdem, welche Informationen Kaufland für eine Produktkategorie benötigt. In dem Format für *Lebensmittel* müssen beispielsweise andere Artikeldaten verknüpft werden als in dem Format für *Auto & Motorrad*. Du musst also für jede Produktkategorie von Kaufland, in der du Artikel verkaufen möchtest, einen eigenen Katalog erstellen.
+Für jede Produktkategorie auf Kaufland gibt es ein eigenes Katalog-Format. In jedem Format werden unterschiedliche Artikeldaten exportiert, je nachdem, welche Informationen Kaufland für eine Produktkategorie benötigt. In dem Format für *Fernseher* müssen beispielsweise andere Artikeldaten verknüpft werden als in dem Format für *Kameras*. Du musst also für jede Produktkategorie von Kaufland, in der du Artikel verkaufen möchtest, einen eigenen Katalog erstellen.
 
 *_Hinweis:_* Für Kaufland können Kataloge momentan nur mit dem Assistenten *Kaufland - Kataloge erstellen* und _nicht_ über das Menü *Daten » Kataloge* erstellt werden.
 
@@ -450,19 +447,26 @@ Katalog mit dem Assistenten erstellen:
 [.collapseBox]
 .Schritt *Katalog für Kaufland erstellen*
 --
-* *Für welches Kaufland-Konto soll dieser Katalog genutzt werden?*
-Wähle das Kaufland-Konto, für das ein Katalog erstellt werden soll. 
+[[table-assistant-kaufland]]
+[cols="1,3a"]
+|===
+|Einstellung |Erläuterung
 
-* *Wie soll der Katalog für diese Kaufland-Kategorie heißen? Der Name wird im Menü Daten » Kataloge angezeigt und nicht zu Kaufland exportiert.*
-Hier gibst du einen internen Namen für den Kaufland-Katalog ein. Dieser Name ist nur in deinem plentymarkets System im Menü *Daten » Kataloge* sichtbar und dient einer besseren Übersicht über deine Kataloge. Der Name des Katalogs wird nicht zu Kaufland exportiert.
+| Für welches Kaufland-Konto soll dieser Katalog genutzt werden?
+| Wähle das Kaufland-Konto, für das ein Katalog erstellt werden soll.
 
-* *Wähle eine Kaufland-Länderplattform.*
-Hier wählst du die Kaufland-Länderplattform, für die ein Katalog erstellt werden soll. Die Artikeldaten in diesem Katalog werden nur an diese Länderplattform exportiert. Du kannst also für verschiedene Länder verschiedene Kataloge mit unterschiedlichen Artikeldaten erstellen. +
+| Wie soll der Katalog für diese Kaufland-Produktkategorie heißen? Der Name wird im Menü *Daten » Kataloge* angezeigt und nicht zu Kaufland exportiert.
+| Hier gibst du einen internen Namen für den Kaufland-Katalog ein. Dieser Name ist nur in deinem plentymarkets System im Menü *Daten » Kataloge* sichtbar und dient einer besseren Übersicht über deine Kataloge. Der Name des Katalogs wird nicht zu Kaufland exportiert. +
+Wähle einen Namen, der aussagekräftig ist und dir bei der Übersicht über deine Kataloge hilft. Wenn du einen Katalog für die Produktkategorie *Fernseher* und die Plattform *Deutschland* erstellst, kannst du den Katalog zum Beispiel *Kaufland: Fernseher (DE)* nennen.
+
+| Wähle eine Kaufland-Länderplattform, auf der du deine Artikel anbieten möchtest. Die verfügbaren Länderplattformen werden als Ländercodes angezeigt. Bei Kaufland heißen die Länderplattformen Storefronts.
+| Hier wählst du die Kaufland-Länderplattform, für die ein Katalog erstellt werden soll. Du legst also in diesem Katalog fest, welche Artikel du in diesem Land in der gewählten Produktkategorie verkaufen möchtest. Du kannst unterschiedliche Artikeldaten an verschiedene Länderplattformen exportieren. +
 Die verfügbaren Länderplattformen werden in Länder-Codes angegeben, zum Beispiel *DE* für *Deutschland*. +
-*_Hinweis:_* Momentan ist nur die Länderplattform *Deutschland (DE)* verfügbar.
+*_Hinweis:_* Momentan ist für Kaufland nur die Länderplattform *Deutschland (DE)* verfügbar.
 
-* *Wähle eine Kaufland-Produktkategorie.*
-Hier wählst du die Produktkategorie, für die ein Katalog erstellt werden soll. Für jede Produktkategorie, in der du deine Artikel auf Kaufland anbieten möchtest, muss ein eigener Katalog erstellt werden. Du erstellst also zum Beispiel verschiedene Kataloge für die Kategorien *Lebensmittel* und *Auto & Motorrad*. 
+| Wähle eine Kaufland-Produktkategorie.
+| Hier wählst du die Produktkategorie, für die ein Katalog erstellt werden soll. Für jede Produktkategorie, in der du deine Artikel auf Kaufland anbieten möchtest, muss ein eigener Katalog erstellt werden. Du erstellst also zum Beispiel verschiedene Kataloge für die Kategorien *Fernseher* und *Kameras*.
+|===
 --
 
 [#data-field-mappings]
@@ -504,11 +508,6 @@ Wenn du für eine Kaufland-Produktkategorie noch keinen Katalog erstellt hast, w
 :interval: einmal täglich
 
 include::partial$catalogue-activation.adoc[]
-
-
-
-
-
 
 [#850]
 == Vorlage für Rechnungen anpassen
@@ -579,7 +578,7 @@ Richte xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktionen] ein, um {ma
 //* Neu: In-Fulfillment-Bestätigung senden (<<#in-fulfillment, Wie?>>)
 
 [#shipping-confirmation]
-=== NEU: Versandbestätigung senden
+=== Versandbestätigungen senden
 
 Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um {market} darüber zu informieren, dass die Artikel eines Auftrags versendet wurden. +
 *_Tipp:_* In der Liste *Aktion hinzufügen* findest du die Aktion *Versandbestätigung an Kaufland.de senden* im Ordner *Plugins*.
