limango - feedback - EN

--- a/docs/de-de/modules/maerkte/partials/checklist-variations.adoc
+++ b/docs/de-de/modules/maerkte/partials/checklist-variations.adoc
@@ -10,7 +10,7 @@ Damit eine Variante zu {market} exportiert werden kann, muss die Variante die fo
 [.collapseBox]
 .Wurde der Katalog exportiert?
 --
-. Öffne das Menü xref::data:catalogues-status.adoc#[Daten » Katalogexportstatus]. +
+. Öffne das Menü xref::daten:catalogues-status.adoc#[Daten » Katalogexportstatus]. +
 . Prüfe in der Liste Zustand und Fortschritt des Exports.
 --
 //end::checklist-variation-export-status[]
