--- a/docs/en-gb/modules/markets/partials/checklist-variations.adoc
+++ b/docs/en-gb/modules/markets/partials/checklist-variations.adoc
@@ -6,6 +6,15 @@
 To export a variation to {market}, this variation has to meet the following requirements:
 //end::checklist-intro[]
 
+//tag::checklist-variation-export-status[]
+[.collapseBox]
+.Was the catalogue exported?
+--
+. Open the menu xref::data:catalogues-status.adoc#[Data » Catalogue export status]. +
+. In the list, check the state and progress of the export.
+--
+//end::checklist-variation-export-status[]
+
 //tag::checklist-variation-referrer[]
 [.collapseBox]
 .Is the order referrer active?
@@ -249,7 +258,7 @@ In the menu *Data » Catalogues » [Open catalogue] » Filter*, you can set filt
 Checking filters:
 
 . Go to *Data » Catalogues » [Open catalogue]*. +
-. On the left in the side navigation, click on the *Filters* (icon:filter_alt[set=material]) tab. +
+. On the left in the side navigation, click on the view *Filters* (icon:filter_alt[set=material]). +
 *_Tip:_* The number next to the word *Filter* shows how many filters have been set. The template filters are included in this number. +
 → The filter overview opens. +
 . Check the logic of the filters.
@@ -261,6 +270,8 @@ Checking filters:
 
 ////
 include::partial$checklist-variations.adoc[tag=checklist-intro]
+
+include::partial$checklist-variations.adoc[tag=checklist-variation-referrer]
 
 include::partial$checklist-variations.adoc[tag=checklist-variation-active]
 
