--- a/docs/de-de/modules/maerkte/partials/catalogue-activation.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-activation.adoc
@@ -11,7 +11,7 @@ Katalogexport zu {market} aktivieren:
 ifdef::rewe[→ Die Daten des Katalogs werden {interval} an {market} exportiert, wenn im Menü *Einrichtung » Märkte » REWE » Grundeinstellungen* die Option *Artikelexport* aktiviert ist. +]
 ifndef::rewe,price-search-engine[→ Die Daten des Katalogs werden {interval} an {market} exportiert. +]
 ifdef::limango[*_Hinweis:_* Nur Varianten werden an {market} exportiert, die in den letzten 4 Stunden geändert wurden. +]
-*_Tipp:_* Informationen zum Status des Exports findest du im Menü xref::data:catalogues-status.adoc#[Daten » Katalogexportstatus].
+*_Tipp:_* Informationen zum Status des Exports findest du im Menü xref::daten:catalogues-status.adoc#[Daten » Katalogexportstatus].
 
 ////
 [#catalogue-activation]
