--- a/docs/en-gb/modules/data/pages/export-standard-formats.adoc
+++ b/docs/en-gb/modules/data/pages/export-standard-formats.adoc
@@ -487,7 +487,7 @@ Adding data field to the export:
 . Go to *Data » Catalogues*. +
 → The catalogue overview opens.
 . Click on the catalogue. +
-→ The view *Data fields* tab (icon:order_return_create_edit[set=plenty[) of the catalogue opens. +
+→ The view *Data fields* (icon:order_return_create_edit[set=plenty]) of the catalogue opens. +
 → The available plentymarkets data fields are listed in groups. In addition, the options *icon:pencil[role="black"] Own value* and *icon:calculate[set=material] Formula* are shown. +
 . Expand a data field group to see the list of data fields in that group.
 . Click on the plus icon next to the data field that you want to export. +
@@ -639,7 +639,7 @@ Recalculating numerical values:
 → The data field is added to the calculation.
 . *_Optional:_* If the symbol icon:more_vert[set=material] is shown in the data field, select the correct assignment for the data field. +
 *_Tip:_* A number tells you how many assignments are necessary for the data field.
-    .. Click on the symbol icon:more_vert[set=material]. +
+    .. Click on the icon icon:more_vert[set=material]. +
     .. In the window shown, select the assignments from the drop-down list.
     .. *Save* the settings.
 . Enter numbers and mathematical operators with the on-screen calculator or the keyboard.
@@ -675,7 +675,7 @@ Removing data fields from export:
 . Go to *Data » Catalogues*. +
 → The catalogue overview opens.
 . Open a catalogue with standard format. +
-→ The *Data fields* tab (icon:order_return_create_edit[set=plenty[) with all available data fields opens.
+→ The tab *Data fields* (icon:order_return_create_edit[set=plenty]) with all available data fields opens.
 . Click on the further actions (icon:more_vert[set=material]) on the right of the data field that you want to remove.
 . Click on *Delete data field* (icon:delete[set=material]). +
 → The data field is removed. +
@@ -697,11 +697,11 @@ Adding a filter:
 . Go to *Data » Catalogues*. +
 → The catalogue overview opens.
 . Open the catalogue.
-. In the navigation to the left, click on *Filter* (icon:filter_alt[set=material]). +
+. In the navigation on the left, click on *Filters* (icon:filter_alt[set=material]). +
 → The filter overview opens.
 . Select a filter from the drop-down list. +
 *_Tip:_* Different filters are available for different standard formats.
-. Click on *Add filter* (icon:add[set=material]) on the right. +
+. On the right, click on *Add filter* (icon:add[set=material]). +
 → The filter is added.
 . If an operator is available for this filter:
   * Select an operator from the drop-down list.
@@ -732,7 +732,6 @@ After you have selected data fields for export, you can test the catalogue expor
 Create a preview in the catalogue::
 +
 --
-//tag::catalogue-preview[]
 [.instruction]
 Creating a preview in the catalogue:
 
@@ -743,8 +742,7 @@ Creating a preview in the catalogue:
 → A preview of the first 5 data rows of the export is shown in the *Preview* window.
 . Check the data. Does the export work as expected?
 . *_Optional_*: Click on *Download data* (icon:file_download[set=material]). +
-→ A CSV file with the first 5 data rows can be saved on your computer.
-//end::catalogue-preview[]
+→ You can save a file with the first 5 data rows on your computer.
 --
  
 Create a preview from the catalogue list::
@@ -764,7 +762,7 @@ Creating a preview from the catalogue list:
 → A preview of the first 5 data rows of the export is shown in the *Preview* window.
 . Check the data. Does the export work as expected?
 . *_Optional_*: Click on *Download data* (icon:file_download[set=material]). +
-→ A CSV file with the first 5 data rows can be saved on your computer.
+→ You can save a file with the first 5 data rows on your computer.
 
 --
 ====
