Kathrin/limango feedback (#742)
* limango - customer requests - DE

* push

* push

* Update catalogue-creation.adoc

* update

* Update limango.adoc

* Update limango-recommended-mappings.adoc

* Update standardformate-exportieren.adoc

* Update standardformate-exportieren.adoc

* Update limango.adoc

* limango - feedback - EN

--- a/docs/en-gb/modules/markets/partials/catalogue-creation.adoc
+++ b/docs/en-gb/modules/markets/partials/catalogue-creation.adoc
@@ -5,17 +5,12 @@ Creating a catalogue:
 . Click on *Create catalogue* (material:add[]).
 . Enter a name for the catalogue.
 . In the drop-down list *Export type*, select the option *{catalogue-template-name}*. +
-ifdef::catalogue-plugin[]
-*_Note:_* The export type *{catalogue-template-name}* is only shown when the plugin {plugin} is installed.
-endif::[]
-ifdef::general-catalogue-info[]
-*_Note:_* The export types of some markets can only be selected after you have installed and provisioned the plugin for that market.
-endif::[]
+ifdef::limango[*_Note:_* Select the format *limango new*, not the old format *limango*.]
+ifdef::catalogue-plugin[*_Note:_* The export type *{catalogue-template-name}* is only shown when the plugin *{plugin}* is installed.]
+ifdef::general-catalogue-info[*_Hinweis:_* The export types of some markets can only be selected after you have installed and provisioned the plugin for that market.]
 ifdef::format-item-new[. In the drop-down list *Format type*, select the option *Item (new)*.]
 ifndef::format-item-new[. In the drop-down list *Format type*, select the option *Item*.]
-ifdef::one-per-category[]
-. In the drop-down list *Format*, select a category of the marketplace.
-endif::[]
+ifdef::one-per-category[. In the drop-down list *Format*, select a category of the marketplace.]
 ifdef::etsy[]
 . From the drop-down list *Format*, select the option *Etsy*. +
 *_Tip:_* You can only create one catalogue for this market. Thus, the only format you can select is the name of the market.
@@ -30,6 +25,7 @@ ifdef::Check24[*_Tip:_* You can create one catalogue for the category Check24 an
 → The catalogue is opened for editing.
 
 ifndef::url-export,price-search-engine[]
+
 [discrete]
 ===== Other catalogue settings
 
