--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -464,7 +464,7 @@ Wähle einen Namen, der aussagekräftig ist und dir bei der Übersicht über dei
 Die verfügbaren Länderplattformen werden in Länder-Codes angegeben, zum Beispiel *DE* für *Deutschland*. +
 *_Hinweis:_* Momentan ist für Kaufland nur die Länderplattform *Deutschland (DE)* verfügbar.
 
-| Wähle eine Kaufland-Produktkategorie.
+| Für welche Kaufland-Kategorie soll ein Katalog erstellt werden? Erstelle einen Katalog für jede Kaufland-Produktkategorie, in der du deine Artikel anbieten möchtest.
 | Hier wählst du die Produktkategorie, für die ein Katalog erstellt werden soll. Für jede Produktkategorie, in der du deine Artikel auf Kaufland anbieten möchtest, muss ein eigener Katalog erstellt werden. Du erstellst also zum Beispiel verschiedene Kataloge für die Kategorien *Fernseher* und *Kameras*.
 |===
 --
