--- a/docs/de-de/modules/automatisierung/pages/aktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/aktionen.adoc
@@ -1140,7 +1140,7 @@ Verfügbare Subaktionen für diese Aktion:
 [#uploaded-docs]
 ==== Hochgeladene Dokumente
 
-Mit der Aktion *Hochgeladene Dokumente* können hochgeladene Dokumente deiner Wahl per Subaktion automatisch zum Beispiel gedruckt oder zwischengespeichert werden. Diese Aktion eignet sich für nicht auftragsbezogene Dokumente.
+Mit der Aktion *Hochgeladene Dokumente* können hochgeladene Dokumente deiner Wahl per Subaktion automatisch zum Beispiel gedruckt oder gespeichert werden. Diese Aktion eignet sich für nicht auftragsbezogene Dokumente.
 
 [.subhead]
 Arbeitsschritte
